test/netlist/error/any-unused-var.bop
A(a, b, d) = c
with unused = (d, _)
where
  c = And(a, b);
end where;
